# Namemo2

./: CMakeLists.txt  README.md
code/: CMakeLists.txt  Resource.h  Status.h  main.cpp
code/smartclass/: CMakeLists.txt  smartclass.cpp  smartclass.h
code/smartclass/camera/: CMakeLists.txt  camera_base.h  camera_tour.cpp  camera_tour.h
code/smartclass/camera/ipcamera/: CMakeLists.txt  distortion_remover.cpp  distortion_remover.h  ipc_common.h  ipcamera.cpp  ipcamera.h
code/smartclass/camera/ipcamera/onvif/: stdsoap2.cpp  wsdd.nsmap  wsddClient.cpp  wsddH.h  wsddStub.h
code/smartclass/camera/ipcamera/onvif/plugin/: mecevp.h  smdevp.h  wsseapi.h
code/smartclass/camera/ipcamera/onvif/soapProxy/: soapAnalyticsDeviceBindingProxy.cpp  soapAnalyticsDeviceBindingProxy.h  soapDeviceBindingProxy.cpp  soapDeviceBindingProxy.h  soapDeviceIOBindingProxy.cpp  soapDeviceIOBindingProxy.h  soapDisplayBindingProxy.cpp  soapDisplayBindingProxy.h  soapImagingBindingProxy.cpp  soapImagingBindingProxy.h  soapMediaBindingProxy.cpp  soapMediaBindingProxy.h  soapPTZBindingProxy.cpp  soapPTZBindingProxy.h  soapPullPointSubscriptionBindingProxy.cpp  soapPullPointSubscriptionBindingProxy.h  soapReceiverBindingProxy.cpp  soapReceiverBindingProxy.h  soapRecordingBindingProxy.cpp  soapRecordingBindingProxy.h  soapRemoteDiscoveryBindingProxy.cpp  soapRemoteDiscoveryBindingProxy.h  soapReplayBindingProxy.cpp  soapReplayBindingProxy.h  soapRuleEngineBindingProxy.cpp  soapRuleEngineBindingProxy.h  soapSearchBindingProxy.cpp  soapSearchBindingProxy.h  soapwsddProxy.cpp  soapwsddProxy.h
code/smartclass/common/: chrono_timer.h  data_path.h  image_observer.h  image_utils.h
code/smartclass/face/: CMakeLists.txt  face_align.cpp  face_align.h  face_database.cpp  face_database.h  face_detector.cpp  face_detector.h  face_namelist.cpp  face_namelist.h  face_observer.cpp  face_observer.h  face_recognizer.cpp  face_recognizer.h
code/smartclass/face/facenn/: CMakeLists.txt  arcface.cpp  arcface.h  retinadecode.cu  retinadecode.h  retinaface.cpp  retinaface.h
code/smartclass/stitcher/: CMakeLists.txt  stitcher.cpp  stitcher.h  stitcher_observer.cpp  stitcher_observer.h  stitching.cpp  stitching.h
code/webserver/: CMakeLists.txt  webserver.cpp  webserver.h
code/webserver/buffer/: resourcebuffer.h
code/webserver/http/: httprequest.cpp  httpresponse.cpp
code/webserver/sqlconnpool/: sql_conn_pool.cpp  sql_conn_pool.h
code/webserver/timer/: heaptimer.cpp
